--- a/locale/sv/LC_MESSAGES/django.po
+++ b/locale/sv/LC_MESSAGES/django.po
@@ -3,12 +3,11 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-10-24 14:28+0300\n"
+"POT-Creation-Date: 2018-10-28 16:11+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -18,9 +17,33 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
+#: .\templates\base.html:52
+msgid "Home"
+msgstr "Startsidan"
+
+#: .\templates\base.html:53
+msgid "Auctions"
+msgstr "Auktioner"
+
+#: .\templates\base.html:54
+msgid "New User"
+msgstr "Skapa användare"
+
+#: .\templates\base.html:56
+msgid "Logout"
+msgstr "Logga ut"
+
+#: .\templates\base.html:59
+msgid "Login"
+msgstr "Logga in"
+
 #: .\templates\base.html:67
 msgid "Yet Another Auction Site"
-msgstr "Ännu en ny auctionssida"
+msgstr ""
+
+#: .\templates\base.html:68
+msgid "Welcome"
+msgstr "Välkommen"
 
 #: .\venv\Lib\site-packages\django\views\templates\default_urlconf.html:6
 msgid "Django: the Web framework for perfectionists with deadlines."
